# eon

./: .gitignore  EON_constitution.txt  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: DEMO_CASES.md  LICENSE.md  ROADMAP.md  architecture.md  security.md
eon/: __init__.py  bridge.py  cli.py  config.py  health.py  local_models.py  logger.py  pfa_engine.py  task_log.py
scripts/: install_headless.sh  verify.sh
tests/: __init__.py  conftest.py  test_bridge.py  test_cli.py  test_config.py  test_engine.py  test_health.py  test_local_models.py  test_packaging.py  test_task_log.py
